--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0969056371037786"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
