--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kymppivisa</title>
+    <meta
+      name="description"
+      content="Osallistu hauskaan päivittäiseen visahaasteeseen! 10 uutta kysymystä joka päivä tiedätkö vastaukset kaikkiin?"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,6 +24,7 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0969056371037786"
       crossorigin="anonymous"
     ></script>
+    <title>Kymppivisa</title>
   </head>
   <body>
     <div id="root"></div>
