--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Osallistu hauskaan päivittäiseen visahaasteeseen! 10 uutta kysymystä joka päivä tiedätkö vastaukset kaikkiin?"
+      content="Kymppivisa on tietokilpailu joka sisältää 10 mielenkiintoista monivalintakysymystä, jotka vaihtuvat päivittäin."
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
