metadata and placeholder
- added some more metadata and changed some
- removed the placeholder ads tsx since it shouldn't be needed anymore

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="description"
-      content="Kymppivisa on tietokilpailu joka sisältää 10 mielenkiintoista monivalintakysymystä, jotka vaihtuvat päivittäin."
+      name="title"
+      content="Tietokilpailu ajankohtaisista ja iättömistä aiheista"
     />
+    <meta
+      name="description"
+      content="Tietokilpailu ajankohtaisista ja iättömistä aiheista. Kymmenen uutta kysymystä joka päivä!"
+    />
+    <meta
+      name="keywords"
+      content="tietovisa, päivittäinen visa, kymppivisa, tietokilpailu, ajankohtaiset kysymykset, visapeli"
+    />
+
     <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
       rel="stylesheet"
